objects/webm__WebMerge_Mapping_Filter__c.object
<CustomObject>
    <fields>
        <fullName>webm__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>webm__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Mapping__c</fullName>
        <label>Webmerge Mapping</label>
        <referenceTo>webm__Webmerge_Mapping__c</referenceTo>
        <relationshipLabel>WebMerge Mapping Filter</relationshipLabel>
        <relationshipName>WebMerge_Mapping_Filter</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WebMerge Mapping Filter</label>
    <nameField>
        <label>WebMerge Mapping Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebMerge Mapping Filter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>